# esp32-wifi

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  wifi.x
.cargo/: config
examples/: test.rs
generate/: Dockerfile  bindgen.sh  coexist_wrapper.h  sdkconfig.h  uX_wrapper.h  wifi_wrapper.h  wpa_wrapper.h
src/: lib.rs  log.rs  timer.rs  wifi.rs
src/binary/: coexist.rs  ctypes.rs  mod.rs  phy.rs  wifi.rs  wpa.rs
src/compatibility/: crypto.rs  implicit.rs  interrupts.rs  mod.rs  osi.rs  printf.c  spinlock.rs  wpa.rs
