[package]
name = "esp32-wifi"
version = "0.1.0"
authors = ["Arjan Mels <arjan@mels.email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32-hal = { path = "../esp32-hal", features=["alloc"]}
esp32 = "0.6.0"
cstr_core = "0.2.0"
cty = "0.2.1"
xtensa-lx6 = "0.2.0"
num-derive = "0.3"
num-traits = { version="0.2", default-features = false }
spin = "0.5.2"

